--- a/src/app/pages/schedules/schedules.html
+++ b/src/app/pages/schedules/schedules.html
@@ -2,7 +2,7 @@
   <!-- Header -->
   <div class="flex justify-between items-center mb-6">
     <div>
-      <h1 class="text-2xl  text-gray-700">Schedules</h1>
+      <h1 class="text-2xl text-gray-700">Schedules</h1>
       <p class="text-gray-500 mt-1 text-md">Manage and assign work schedules</p>
     </div>
 
@@ -15,18 +15,23 @@
   </div>
 
   <!-- Filters -->
-  <div class="flex gap-4 mb-6 border border-gray-200 rounded-xl bg-white p-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 mb-6 border border-gray-200 rounded-xl bg-white p-4">
     <div class="flex items-center gap-2">
-   <i class="fa-solid fa-filter text-pro text-xl"></i>
-    <select [(ngModel)]="selectedDepartment" class="border rounded-lg px-3 py-2 text-gray-700">
-      <option *ngFor="let dept of departments">{{ dept }}</option>
-    </select>
+      <i class="fa-solid fa-filter text-pro text-xl"></i>
+      <div class="flex flex-col gap-1 w-full">
+        <h4>Department</h4>
+        <select [(ngModel)]="selectedDepartment" class="border border-gray-200  rounded-lg px-3 py-2 text-gray-700">
+          <option *ngFor="let dept of departments">{{ dept }}</option>
+        </select>
+      </div>
     </div>
- 
 
-    <select [(ngModel)]="selectedStatus" class="border rounded-lg px-3 py-2 text-gray-700">
-      <option *ngFor="let status of statuses">{{ status }}</option>
-    </select>
+    <div class="flex flex-col">
+      <h4>Status</h4>
+      <select [(ngModel)]="selectedStatus" class="border border-gray-200 rounded-lg px-3 py-2 text-gray-700">
+        <option *ngFor="let status of statuses" class="hover:bg-emerald-100">{{ status }}</option>
+      </select>
+    </div>
   </div>
 
   <!-- Table -->
@@ -58,10 +63,9 @@
           </td>
 
           <td class="p-4 text-sm">
-             <span class="bg-pro-hover1 text-pro rounded-xl p-1 px-3">
-            {{ s.department }}
-
-             </span>
+            <span class="bg-pro-hover1 text-pro rounded-xl p-1 px-3">
+              {{ s.department }}
+            </span>
           </td>
           <td class="p-4 text-sm text-gray-700">{{ s.shift }}</td>
           <td class="p-4 text-sm text-gray-700">{{ s.time }}</td>
