--- a/src/app/pages/swap-requests/swap-requests.html
+++ b/src/app/pages/swap-requests/swap-requests.html
@@ -3,21 +3,47 @@
 
   <!-- Summary Cards -->
   <div class="grid grid-cols-3 gap-4 mb-8">
-    <div class="bg-yellow-100 text-yellow-800 p-4 rounded-lg text-center font-semibold">
-      Pending: {{ pendingCount }}
+    <div class="flex justify-between bg-white items-center p-5 rounded-2xl border border-gray-200">
+      <div>
+        <p class="text-gray-500 mb-3">Pending</p>
+        <p>{{ pendingCount }}</p>
+      </div>
+
+      <div
+        class="bg-yellow-100 text-yellow-700 w-10 h-10 flex items-center justify-center rounded-full text-center"
+      >
+        <i class="fa-regular fa-clock text-xl"></i>
+      </div>
     </div>
-    <div class="bg-green-100 text-green-800 p-4 rounded-lg text-center font-semibold">
-      Approved: {{ approvedCount }}
+    <div class="flex justify-between bg-white items-center p-5 rounded-2xl border border-gray-200">
+      <div>
+        <p class="text-gray-500 mb-3">Approved</p>
+        <p>{{ approvedCount }}</p>
+      </div>
+
+      <div
+        class="bg-green-100 text-green-800 w-10 h-10 flex items-center justify-center rounded-full text-center"
+      >
+        <i class="fa-solid fa-check text-xl"></i>
+      </div>
     </div>
-    <div class="bg-red-100 text-red-800 p-4 rounded-lg text-center font-semibold">
-      Rejected: {{ rejectedCount }}
+    <div class="flex justify-between bg-white items-center p-5 rounded-2xl border border-gray-200" >
+      <div>
+        <p class="text-gray-500 mb-3">Rejected</p>
+        <p>{{ rejectedCount }}</p>
+      </div>
+      <div
+        class="bg-red-100 text-red-500 w-10 h-10 flex items-center justify-center rounded-full text-center"
+      >
+        <i class="fa-solid fa-x text-lg"></i>
+      </div>
     </div>
   </div>
 
   <!-- Requests Table -->
-  <div class="bg-white shadow-md rounded-lg overflow-hidden">
+  <div class="bg-white border border-gray-200 rounded-lg overflow-hidden">
     <table class="min-w-full text-sm text-left text-gray-600">
-      <thead class="bg-gray-100 text-gray-800">
+      <thead class="text-gray-800 border-b border-gray-200">
         <tr>
           <th class="px-6 py-3">Requester</th>
           <th class="px-6 py-3">Target User</th>
@@ -29,7 +55,10 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let req of requests" class="border-b hover:bg-gray-50 transition">
+        <tr
+          *ngFor="let req of requests"
+          class="border-b border-gray-200 hover:bg-gray-50 transition"
+        >
           <td class="px-6 py-4">
             <div class="font-semibold">{{ req.requester }}</div>
             <div class="text-xs text-gray-500">{{ req.requesterDepartment }}</div>
@@ -48,9 +77,9 @@
           <td class="px-6 py-4">
             <span
               [ngClass]="{
-                'text-yellow-600 font-semibold': req.status === 'pending',
-                'text-green-600 font-semibold': req.status === 'approved',
-                'text-red-600 font-semibold': req.status === 'rejected'
+                'text-yellow-700 bg-amber-100 font-semibold px-3 py-2': req.status === 'pending',
+                'text-green-700 font-semibold bg-green-100 px-3 py-2': req.status === 'approved',
+                'text-red-700 font-semibold bg-red-100 px-3 py-2': req.status === 'rejected'
               }"
             >
               {{ req.status }}
@@ -60,15 +89,17 @@
             <button
               *ngIf="req.status === 'pending'"
               (click)="approveRequest(req)"
-              class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded-lg mr-2"
+              class="bg-green-500 cursor-pointer hover:bg-green-600 text-white px-3 py-1 rounded-lg mr-2"
             >
+              <i class="fa-solid fa-check"></i>
               Approve
             </button>
             <button
               *ngIf="req.status === 'pending'"
               (click)="rejectRequest(req)"
-              class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded-lg"
+              class="bg-red-500 cursor-pointer hover:bg-red-600 text-white px-3 py-1 rounded-lg"
             >
+              <i class="fa-solid fa-x"></i>
               Reject
             </button>
           </td>
