--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -5,21 +5,44 @@
     <div class="space-y-4">
       <input
         type="email"
-        placeholder="Email"
-        [(ngModel)]="email"
-        class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-indigo-400"
+        placeholder="Email or Nickname"
+        [(ngModel)]="identifier"
+        class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-teal-600 placeholder-gray-400 outline-none"
       />
       <input
         type="password"
         placeholder="Password"
         [(ngModel)]="password"
-        class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-indigo-400"
+        class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-teal-600 placeholder-gray-400 outline-none"
       />
       <button
         (click)="login()"
-        class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded-lg"
+        [disabled]="loading"
+        class="w-full bg-teal-800 hover:bg-teal-700 text-white py-3 rounded-lg"
       >
-        Login
+        @if(!loading){
+        <span>Login</span>
+        } @if(loading){
+        <span class="flex justify-center items-center space-x-2">
+          <svg
+            class="animate-spin h-5 w-5 text-white"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <circle
+              class="opacity-25"
+              cx="12"
+              cy="12"
+              r="10"
+              stroke="currentColor"
+              stroke-width="4"
+            ></circle>
+            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8H4z"></path>
+          </svg>
+          <span>Logging in...</span>
+        </span>
+        }
       </button>
     </div>
   </div>
