--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -51,8 +51,7 @@
   <!-- Logout -->
   <div class="mt-4 border-t border-gray-200 pt-2 px-2 w-full py-5 self-end cursor-pointer">
     <a
-      routerLink="/login"
-      (click)="closeOnMobile()"
+      (click)="logout()"
       class="flex items-center text-[0.9rem] gap-4 text-red-500 hover:text-red-600 transition-colors border border-red-400 rounded-xl text-red1 p-2 mt-4 mx-2 bg-red-hover"
     >
       <i class="fa-solid fa-right-from-bracket ms-3"></i> Logout
